welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:10: error: '(' expected but identifier found.
	if test(a) {
           ^countTeen:13: error: '(' expected but identifier found.
	if test(b) {
           ^countTeen:16: error: '(' expected but identifier found.
	if test(b) {
           ^